# bb_imgacquisition

./: .clang-format  .editorconfig  .gitignore  BaslerCamThread.cpp  BaslerCamThread.h  CMakeCache.txt  CMakeLists.txt  CamThread.h  Flea3CamThread.h  ImageAnalysis.cpp  ImgAcquisition.sln  ImgAcquisitionApp.cpp  ImgAcquisitionApp.h  Makefile  NvEncGlue.h  README.md  XimeaCamThread.cpp  bb_ImageAcquistion  cmake_install.cmake  config.json  configImAcq.json  main.cpp  run_bb_imgacquisition.sh  writeHandler.h
Buffer/: MutexLinkedList.h
ImgAcquisition/: CMakeLists.txt  Flea3CamThread.cpp  Flea3CamThread.h  ImageAnalysis.cpp  ImageAnalysis.h  ImgAcquisition.vcxproj  ImgAcquisition.vcxproj.filters  ImgAcquisitionApp.cpp  ImgAcquisitionApp.h  MutexRingbuffer.cpp  MutexRingbuffer.h  NvEncGlue.cpp  NvEncGlue.h  SharedMemory.cpp  SharedMemory.h  Watchdog.h  XimeaCamThread.cpp  XimeaCamThread.h  imageAnalysis.cpp  imageAnalysis.h  main.cpp  writeHandler.cpp  writeHandler.h
ImgAcquisition/Buffer/: MutexBuffer.h  MutexLinkedList.cpp  MutexLinkedList.h  MutexRingbuffer.cpp  MutexRingbuffer.h  Semaphore.h
ImgAcquisition/nvenc/: NvEncoder.cpp  NvEncoder.h  NvHWEncoder.cpp  NvHWEncoder.h  nvCPUOPSys.h  nvFileIO.h  nvUtils.h
ImgAcquisition/settings/: ParamNames.h  Settings.cpp  Settings.h  StringTranslator.cpp  StringTranslator.h  stringTools.h  utility.cpp  utility.h
Resources/: FlyCapture2 (x64).props  FlyCapture2 Debug (x64).props
arduino/: trigger.c
bb_ImageAcquistion_autogen/: moc_predefs.h  mocs_compilation.cpp
bb_ImageAcquistion_autogen/EWIEGA46WW/: moc_BaslerCamThread.cpp  moc_CamThread.cpp  moc_Flea3CamThread.cpp  moc_ImageAnalysis.cpp  moc_ImgAcquisitionApp.cpp  moc_NvEncGlue.cpp  moc_SharedMemory.cpp  moc_XimeaCamThread.cpp
cmake/: AddTargetMetadata.cmake  FindFFmpeg.cmake  FindXIMEA.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
halidePreCompile/: CMakeLists.txt  halideYuvConv.cpp
settings/: Settings.cpp  Settings.h  stringTools.cpp  utility.cpp  utility.h
src/: BaslerCamThread.cpp  BaslerCamThread.h  BaslerCamera.cpp  BaslerCamera.h  CamThread.cpp  CamThread.h  Camera.cpp  Camera.h  ConcurrentQueue.h  DateTime.cpp  DateTime.h  Flea3CamThread.cpp  Flea3CamThread.h  Flea3Camera.cpp  Flea3Camera.h  GrayscaleImage.cpp  GrayscaleImage.h  ImageAnalysis.cpp  ImageAnalysis.h  ImageStream.cpp  ImageStream.h  ImageStream.hpp  ImageStreamsWriter.cpp  ImageStreamsWriter.h  ImageStreamsWriter.hpp  ImgAcquisitionApp.cpp  ImgAcquisitionApp.h  ImgAcquisitionApp.hpp  NvEncGlue.cpp  NvEncGlue.h  PlatformAdapter.cpp  PlatformAdapter.h  Settings.cpp  Settings.h  Settings.hpp  SharedMemory.cpp  SharedMemory.h  VideoFile.cpp  VideoFile.h  VideoFileWriter.cpp  (+26 more)
src/Buffer/: ImageBuffer.cpp  ImageBuffer.h  MutexBuffer.h  MutexLinkedList.cpp  MutexLinkedList.h  Semaphore.h
src/camera/: BaslerCamera.cpp  BaslerCamera.h  BaslerCamera.hpp  Camera.cpp  Camera.h  Camera.hpp  Flea3Camera.cpp  Flea3Camera.h  Flea3Camera.hpp  XimeaCamera.cpp  XimeaCamera.h  XimeaCamera.hpp
src/cmake/: BuildTimestamp.cmake  FindFlyCapture2.cmake  FindPylon5.cmake
src/nvenc/: NvEncoder.cpp  NvEncoder.h  NvHWEncoder.cpp  NvHWEncoder.h  cudaModuleMgr.cpp  cudaModuleMgr.h  drvapi_error_string.h  dynlink_builtin_types.h  dynlink_cuda.cpp  dynlink_cuda.h  dynlink_cudaGL.h  dynlink_cuda_cuda.h  dynlink_cuda_gl.h  dynlink_cuviddec.h  dynlink_nvcuvid.cpp  dynlink_nvcuvid.h  exception.h  helper_cuda.h  helper_cuda_drvapi.h  helper_functions.h  helper_string.h  helper_timer.h  nvCPUOPSys.h  nvEncodeAPI.h  nvFileIO.h  nvUtils.h
src/settings/: ParamNames.h  Settings.cpp  Settings.h  StringTranslator.cpp  StringTranslator.h  stringTools.cpp  stringTools.h  utility.cpp  utility.h
src/util/: PlatformAdapter.cpp  build_timestamp.cpp.in  format.h  format.hpp  log.cpp  log.h  log.hpp  type_traits.h  version.cpp.in
